--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -31,7 +31,7 @@
     margin-right: 1rem;
   
 }
-.btn___hightlight{margin-top: 3rem}
+.hero___container .btn___hightlight{margin-top: 3rem}
 .hero___left-section-container {
     align-self: end;
     overflow: hidden;
