--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,8 @@ body {
   width: 100%;
   box-sizing: border-box;
   background-color: #f4f2f2;
+  font-family: "Noto Sans", sans-serif;
+  color: #141110;
 }
 h1,
 h2,
@@ -37,6 +39,7 @@ h5,
 h6,
 p {
   font-family: "Noto Sans", sans-serif;
+  color: #141110;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -101,9 +104,7 @@ code {
 .btn___primary:hover,
 .btn___primary:focus {
   background-color: #efd3d3;
-
 }
 .btn___primary:active {
   background-color: #f1a9a9;
-
 }
