FRONTEND |  Lista de perritus

--- a/client/src/components/List/List.css
+++ b/client/src/components/List/List.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   /* grid-gap: 2rem; */
   gap: 2rem;
   margin-block: 0;
