FRONTEND | Acomodar enlaces

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,6 +1,6 @@
 .nav___container{
     width: 100%;
-    background-color: #fdcab042; 
+    background-color: #fd7979dc; 
     display: flex;
     justify-content: space-between;
     align-content: center;
@@ -10,6 +10,7 @@
     box-sizing: border-box;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     position: fixed;
+    z-index: 999999999;
 }
 
 #nav___brand{
