--- a/client/src/index.css
+++ b/client/src/index.css
@@ -108,3 +108,11 @@ code {
 .btn___primary:active {
   background-color: #f1a9a9;
 }
+.disabled {
+  background-color: #828282;
+  cursor: default;
+}
+.btn___hightlight:hover,
+.btn___hightlight:focus {
+  background-color: #67666685;
+}
