--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,6 +40,7 @@ h6,
 p {
   font-family: "Noto Sans", sans-serif;
   color: #141110;
+  color: #4f4846;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
