--- a/client/src/components/Pagition/Pagination.css
+++ b/client/src/components/Pagition/Pagination.css
@@ -1,5 +1,6 @@
 .pagination___container {
   font-family: "Work Sans", sans-serif;
+  color:  #4f4846 !important;
 }
 .pagination {
   list-style-type: none;
@@ -24,6 +25,7 @@
   transform: all ;
   cursor: pointer;
   transition: all 250ms;
+  color:  #4f4846 !important;
 }
 
 .active {
