--- a/client/src/components/Filters/Filter.css
+++ b/client/src/components/Filters/Filter.css
@@ -1,9 +1,8 @@
 .filter___main {
   display: flex;
   flex-direction: row;
-
   justify-content: space-around;
-  align-items: flex-start;
+  align-items: center;
 }
 .filter___weight-control,
 .filter___alphabect-control,
@@ -17,12 +16,22 @@
 .filter___weight-control button,
 .filter___alphabect-control button {
   display: inline-block;
-  margin: 0.2rem;
+  /*  margin: 0.2rem; */
+  border: 1px solid rgb(220 220 220 / 60%);
+  margin-right: 0;
+  border-radius: 0 8px  8px 0;
+  
+}
+.filter___weight-control button:first-child,
+.filter___alphabect-control button:first-child {
+ border-radius: 8px 0 0 8px;
+ 
 }
 .filter___temperaments-control select {
   color: #141110;
   background-color: #f4f2f2;
   border: none;
+  border: 1px solid rgb(220 220 220 / 60%);
   font-size: 1rem;
   font-family: "Noto Sans", sans-serif;
   padding: 0.72rem 0.5rem;
