--- a/client/src/components/List/List.css
+++ b/client/src/components/List/List.css
@@ -8,3 +8,27 @@
   margin-block: 0;
   margin: 0;
 }
+.list___header-container {
+  display: inline-flex;
+}
+
+.list___header-container {
+  display: grid;
+  grid-template-columns: 1fr 20%;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.list___header-container h3 {
+  grid-area: 1 / 1 / 2 / 2;
+  justify-self: flex-start;
+  padding-left: 6rem;
+}
+.list___header-container button {
+  grid-area: 1 / 2 / 2 / 3;
+
+}
+.hidden {
+  display: none;
+}
