--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -7,7 +7,7 @@
 .search___input{
     color: #141110;
     background-color: #f4f2f2;
-    border: none;
+    border: 1px solid rgb(220 220 220 / 60%);
     font-size: 1rem;
     font-family: "Noto Sans", sans-serif;
     padding: .72rem .5rem;
