--- a/client/src/components/List/List.css
+++ b/client/src/components/List/List.css
@@ -27,7 +27,9 @@
 }
 .list___header-container button {
   grid-area: 1 / 2 / 2 / 3;
-
+  margin: 0.8rem 0;
+  margin-right: 6rem;
+  justify-self: end;
 }
 .hidden {
   display: none;
