--- a/client/src/components/Pagition/Pagination.css
+++ b/client/src/components/Pagition/Pagination.css
@@ -1,6 +1,7 @@
 .pagination___container {
   font-family: "Work Sans", sans-serif;
   color:  #4f4846 !important;
+  width: 100%;
 }
 .pagination {
   list-style-type: none;
@@ -8,7 +9,7 @@
   padding: 0;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   align-content: center;
