--- a/client/src/components/Details/Details.css
+++ b/client/src/components/Details/Details.css
@@ -2,7 +2,7 @@
   min-height: 120vh;
 }
 .details___dogs-img {
-  min-height: 60vh;
+  min-height: 70vh;
   width: 100%;
   z-index: 0;
   /*     background-repeat: no-repeat;
@@ -14,11 +14,14 @@
   background: linear-gradient(
     180deg,
     rgba(253, 90, 89, 0) 0%,
-    rgba(244, 242, 242, 1) 90%
+    rgba(244, 242, 242, 0.4033262963388481) 39%,
+    rgba(244, 242, 242, 1) 71%
   );
   min-height: 10vh;
   position: relative;
-  bottom: 0;
+  bottom: -29rem;
+  left: 0;
+  top: 29rem;
 }
 
 .details___dogs-info {
@@ -62,8 +65,8 @@
   background-color: #f4f2f2;
   padding: 0.8rem;
   position: absolute;
-  top: 11px;
-  right: 12px;
+  top: 2rem;
+  right: 2rem;
   z-index: 2;
   border: none;
   border-radius: 7px;
@@ -73,8 +76,15 @@
 }
 .details___dogs-info .btn___hightlight {
   position: absolute;
-  top: 11px;
-  right: 60px;
+  top: 2rem;
+  right: 6rem;
+}
+.details___id {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  color: #4f4846;
+  font-size: 0.6rem;
 }
 .details___temp-list {
   margin-block: 0;
@@ -94,14 +104,13 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-content: center;
-
 }
 .details___tag h3,
 .details___tag p {
   margin: 0;
   gap: 0;
   padding: 0;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 .details___tag h3 {
   margin-right: 0.5rem;
