--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     position: fixed;
-    z-index: 999999999;
+    z-index: 9999;
 }
 
 #nav___brand{
