--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -1,20 +1,26 @@
 .home___main {
   padding-top: 6rem;
-  height: 150vh;
-  max-height: 300vh;
-  min-height: 120vh;
+  min-height: 150vh;
   background: rgba(244, 242, 242, 1);
-/*   background: linear-gradient(
+  /*   background: linear-gradient(
     180deg,
     rgba(253, 90, 89, 1) 0%,
     rgba(244, 242, 242, 1) 30%
   ); */
-
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 5% 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+}
+@media screen and (max-width: 470px) {
+  .home___main {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .filter___main {
@@ -26,4 +32,6 @@
 .list____main {
   grid-area: 2 / 1 / 3 / 4;
 }
-.list___main { grid-area: 2 / 1 / 3 / 4; }
+.list___main {
+  grid-area: 2 / 1 / 3 / 4;
+}
