--- a/client/src/components/Filters/Filter.css
+++ b/client/src/components/Filters/Filter.css
@@ -4,11 +4,18 @@
   justify-content: space-around;
   align-items: center;
 }
-/* @media screen and (max-width: 470px) {
+@media screen and (max-width: 470px) {
   .filter___main {
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    padding: 1rem 1rem;
+    gap: 0.5rem;
   }
-} */
+}
 .filter___weight-control,
 .filter___alphabect-control,
 .filter___temperaments-control {
