--- a/client/src/index.css
+++ b/client/src/index.css
@@ -131,7 +131,8 @@ code {
   justify-content: center;
   align-content: center;
   align-items: center;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   transition: all 250ms;
   user-select: none;
   -webkit-user-select: none;
