--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -19,26 +19,54 @@
   overflow: hidden;
   padding-top: 5rem;
 }
+@media screen and (max-width: 470px) {
+  .hero___container {
+    grid-template-rows: repeat(2, 50%);
+    /*     grid-template-rows: 70% 30%; */
+    grid-template-columns: 1fr;
+  }
+}
 .hero___right-section-container {
-    padding-left: 3rem;
+  padding-left: 3rem;
+}
+@media screen and (max-width: 470px) {
+  .hero___right-section-container {
+    padding-left: 0rem;
+  }
 }
 .hero___right-section-container h1 {
-    color: #f4f2f2;
-    font-size: 12rem;
-    line-height: 13rem;
-    margin: 0;
+  color: #f4f2f2;
+  font-size: 12rem;
+  line-height: 13rem;
+  margin: 0;
+}
+@media screen and (max-width: 470px) {
+  .hero___right-section-container h1 {
+    font-size: 8rem;
+    line-height: 9rem;
+  }
 }
 .btn___primary {
-    margin-right: 1rem;
-  
+  margin-right: 1rem;
 }
-.hero___container .btn___hightlight{margin-top: 3rem}
+.hero___container .btn___hightlight {
+  margin-top: 3rem;
+}
 .hero___left-section-container {
-    align-self: end;
-    overflow: hidden;
-    box-sizing: border-box;
+  align-self: end;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
-.hero___left-section-container img{
-    height: 40rem;
+.hero___left-section-container img {
+  height: 40rem;
+}
+.hero___left-section-container img {
+  height: 40rem;
+}
+
+@media screen and (max-width: 470px) {
+  .hero___left-section-container img {
+    height: 22rem;
+  }
 }
