--- a/client/src/components/Quiz/Quiz.css
+++ b/client/src/components/Quiz/Quiz.css
@@ -13,6 +13,7 @@
   align-content: center;
   justify-content: center;
 }
+  background: #0806065e;
 .quiz___cointainer {
   background-color: #f4f2f2;
   width: 60%;
