--- a/client/src/components/Quiz/Quiz.css
+++ b/client/src/components/Quiz/Quiz.css
@@ -1,19 +1,26 @@
 .quiz___main {
-  background: #fd79795e;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 100000000;
-  cursor: pointer;
   transition: all 250ms ease-in-out;
   display: flex;
   align-items: center;
   align-content: center;
   justify-content: center;
 }
+.quiz___background {
   background: #0806065e;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 222;
+  cursor: pointer;
+}
 .quiz___cointainer {
   background-color: #f4f2f2;
   width: 60%;
@@ -36,17 +43,26 @@
   margin-bottom: 4rem;
   cursor: auto;
 }
+@media screen and (max-width: 470px) {
+  .quiz___cointainer {
+    width: 80%;
+  }
+}
+.quiz___cointainer h3{
+  margin-bottom: 2rem;
+}
 .quiz___form fieldset {
   border: none;
 }
 .quiz___form {
-  overflow-y: scroll;
-  height: 100%;
+  /* overflow-y: scroll; */
+ /*  height: 100%; */
+  margin-bottom: 2rem;
 }
 .quiz___radio-tile-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   margin: 1.5rem 1rem;
 }
@@ -124,15 +140,15 @@
   align-content: center;
   justify-content: space-evenly;
 }
-.quiz___disabled{
-    background: #8f8989dc;
+.quiz___disabled {
+  background: #8f8989dc;
 }
 .quiz___wizard-btn {
   background: #fd7979dc;
-  border-radius: 50%;
+  border-radius: 0.5rem;
   border: none;
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 3rem;
+  width: 3rem;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   transition: all 250ms;
@@ -140,8 +156,20 @@
   -webkit-user-select: none;
   touch-action: manipulation;
   border: 1px solid transparent;
+  color: #f4f2f2 !important;
+  font-weight: 600;
+  font-family: "Work Sans", sans-serif;
+  cursor: pointer;
 }
-
+@media screen and (max-width: 470px) {
+  .quiz___wizard-btn {
+    height: 1.5rem;
+    width: 2.5rem;
+  }
+}
+.quiz___wizard-btn  +.active{
+  background-color: #fd5a59;
+}
 quiz___wizard-btn:focus {
   background-color: #fd595985;
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
