--- a/client/src/components/Pagition/Pagination.css
+++ b/client/src/components/Pagition/Pagination.css
@@ -2,6 +2,7 @@
   font-family: "Work Sans", sans-serif;
   color: #4f4846 !important;
   width: 100%;
+  margin-bottom: 2rem;
 }
 .pagination {
   list-style-type: none;
