--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -19,6 +19,13 @@
   overflow: hidden;
   padding-top: 5rem;
 }
+@media screen and (max-width: 720px) {
+  .hero___container {
+    grid-template-rows: repeat(2, 50%);
+    /*     grid-template-rows: 70% 30%; */
+    grid-template-columns: 1fr;
+  } 
+}
 @media screen and (max-width: 470px) {
   .hero___container {
     grid-template-rows: repeat(2, 50%);
@@ -28,6 +35,11 @@
 }
 .hero___right-section-container {
   padding-left: 3rem;
+}
+@media screen and (max-width: 720px) {
+  .hero___right-section-container {
+    padding-left: 0rem;
+  }
 }
 @media screen and (max-width: 470px) {
   .hero___right-section-container {
@@ -39,6 +51,12 @@
   font-size: 12rem;
   line-height: 13rem;
   margin: 0;
+}
+@media screen and (max-width: 720px) {
+  .hero___right-section-container h1 {
+    font-size: 8rem;
+    line-height: 9rem;
+  }
 }
 @media screen and (max-width: 470px) {
   .hero___right-section-container h1 {
@@ -52,6 +70,12 @@
 .hero___container .btn___hightlight {
   margin-top: 3rem;
 }
+@media screen and (max-width: 720px) {
+  .hero___container .btn___hightlight {
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+  }
+}
 .hero___left-section-container {
   align-self: end;
   overflow: hidden;
@@ -64,7 +88,11 @@
 .hero___left-section-container img {
   height: 40rem;
 }
-
+@media screen and (max-width: 720px) {
+  .hero___left-section-container img {
+    height: 22rem;
+  }
+}
 @media screen and (max-width: 470px) {
   .hero___left-section-container img {
     height: 22rem;
