--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -13,6 +13,11 @@
   touch-action: manipulation;
   vertical-align: baseline;
 }
+@media screen and (max-width:960px) {
+  .card___container {
+    width: 45%;
+  } 
+}
 @media screen and (max-width: 720px) {
   .card___container {
     width: 45%;
