--- a/client/src/components/Filters/Filter.css
+++ b/client/src/components/Filters/Filter.css
@@ -4,6 +4,18 @@
   justify-content: space-around;
   align-items: center;
 }
+@media screen and (max-width:720px) {
+  .filter___main {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    padding: 1rem 1rem;
+    gap: 0.5rem;
+  }
+}
 @media screen and (max-width: 470px) {
   .filter___main {
     display: flex;
