--- a/client/src/components/Filters/Filter.css
+++ b/client/src/components/Filters/Filter.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  margin-left: 2rem ;
 }
 @media screen and (max-width:720px) {
   .filter___main {
@@ -14,6 +15,7 @@
     align-content: center;
     padding: 1rem 1rem;
     gap: 0.5rem;
+    margin-left: 0rem ;
   }
 }
 @media screen and (max-width: 470px) {
@@ -75,3 +77,5 @@
 .filter___temperaments-control label {
   margin-bottom: 1rem;
 }
+
+
